# check-nice-gui

./: .gitignore  hello.py  main.py  pyproject.toml
frontend/: frontend.py
frontend/core/: __init__.py  header_component.py
frontend/pages/: __init__.py  about.py  home.py  main_table.py  sandbox.py
