[project]
name = "check-nice-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.11",
    "nicegui>=2.12.1",
    "pandas>=2.2.3",
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 120
indent-width = 4
